<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:layout_marginTop="100dp"
    android:orientation="vertical">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What is your package size?"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            />
        <RadioButton
            android:id="@+id/sizeS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_s"/>
        <RadioButton
        android:id="@+id/sizeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_m"/>
        <RadioButton
            android:id="@+id/sizeL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_l"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_up">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPickUp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drop_off">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDropOff"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="When to pick up?"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="Roboto"
        android:textColor="@android:color/black"
        android:background="@drawable/login_buttons"
        android:id="@+id/submit"
        android:text="Next"/>

</LinearLayout>