<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:layout_marginTop="100dp"
    android:orientation="vertical">

    <!-- username tag-->

    <!-- username edit area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLogin"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:fontFamily="Roboto"-->
<!--        android:textColor="#000000"-->
<!--        android:layout_marginVertical="20dp"-->
<!--        android:cursorVisible="true"-->
<!--        android:background="@drawable/border"-->
<!--        android:id="@+id/editTextLogin"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:hint="@string/username"/>-->


    <!-- password edit area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        android:fontFamily="Roboto"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:id="@+id/editTextPassword"-->
<!--        android:background="@drawable/border"-->
<!--        android:layout_marginVertical="20dp"-->
<!--        android:cursorVisible="true"-->
<!--        android:inputType="textPassword"-->
<!--        android:textColor="#000000"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:hint="@string/password"/>-->

    <!-- email edit area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- button to onboard_layout-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="Roboto"
        android:textColor="@android:color/black"
        android:background="@drawable/login_buttons"
        android:id="@+id/submit"
        android:text="Next"/>


</LinearLayout>
